# quant-avg-consensus-for-chainweb

./: .gitignore  README.md  cabal.project  cases.sh  quant-avg-consensus.cabal  quant-avg-consensus.ipynb  samples.sh
main/: Main.hs
src/QuantAvgConsensus/: Dense.hs  Sparse.hs  Utils.hs
